--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body{
 font-family: "Poppins", sans-serif;
 }
 header{
-background-color: #424e61;
+background-color: #227B94;
 color: white;
 width: 100%;
 padding: 20px;
