--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ display: flex;
 justify-content: space-around;
 }
 .escola{
-background-image: linear-gradient(#40A2E3,#7FC2EF);
+background-image: linear-gradient(#227B94,#227B94);
 color: white;
 display: flex;
 justify-content:center;
